--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,40 +1,67 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
-name: .NET
+name: Build and Publish Multiple Projects
 
 on:
     push:
-        branches: ['master']
-    pull_request:
-        branches: ['master']
+        branches: [main]
 
 jobs:
     build:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: actions/checkout@v4
+            - name: Checkout code
+              uses: actions/checkout@v4
+
             - name: Setup .NET
               uses: actions/setup-dotnet@v4
               with:
-                  dotnet-version: 10.0.x
-            - name: Restore dependencies
-              run: dotnet restore
+                  dotnet-version: '10.0.x'
 
-            - name: Build
-              run: dotnet build --no-restore
+            # Project 1
+            - name: Restore ConsoleApp
+              run: dotnet restore ./ConsoleApp/ConsoleApp.csproj
 
-            - name: Test
-              run: dotnet test --no-build --verbosity normal
+            - name: Build ConsoleApp
+              run: dotnet build ./ConsoleApp/ConsoleApp.csproj --configuration Release --no-restore
 
-            - name: Publish
-              run: dotnet publish -c Release -o ./publish
+            - name: Publish ConsoleApp
+              run: dotnet publish ./ConsoleApp/ConsoleApp.csproj -c Release -o ./publish/ConsoleApp
 
-            # 👇 Upload artifacts to GitHub
-            - name: Upload build artifacts
+            # Project 2
+            - name: Restore ononlaw-api
+              run: dotnet restore ./ononlaw-api/ononlaw-api.csproj
+
+            - name: Build ononlaw-api
+              run: dotnet build ./ononlaw-api/ononlaw-api.csproj --configuration Release --no-restore
+
+            - name: Publish ononlaw-api
+              run: dotnet publish ./ononlaw-api/ononlaw-api.csproj -c Release -o ./publish/ononlaw-api
+
+            # Project 3
+            - name: Restore WorkerService
+              run: dotnet restore ./WorkerService/WorkerService.csproj
+
+            - name: Build WorkerService
+              run: dotnet build ./WorkerService/WorkerService.csproj --configuration Release --no-restore
+
+            - name: Publish WorkerService
+              run: dotnet publish ./WorkerService/WorkerService.csproj -c Release -o ./publish/WorkerService
+
+            # Upload artifacts separately
+            - name: Upload ConsoleApp Artifact
               uses: actions/upload-artifact@v4
               with:
-                  name: dotnet-api-build
-                  path: ./publish
-                  retention-days: 30 # Keep for 30 days
+                  name: ConsoleApp-build
+                  path: ./publish/ConsoleApp
+
+            - name: Upload ononlaw-api Artifact
+              uses: actions/upload-artifact@v4
+              with:
+                  name: project2-build
+                  path: ./publish/ononlaw-api
+
+            - name: Upload WorkerService Artifact
+              uses: actions/upload-artifact@v4
+              with:
+                  name: WorkerService-build
+                  path: ./publish/WorkerService
