--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,7 +2,7 @@ name: Build and Publish Multiple Projects
 
 on:
     push:
-        branches: [main]
+        branches: [master]
 
 jobs:
     build:
